--- a/_gazettes/za/2015.md
+++ b/_gazettes/za/2015.md
@@ -1,12 +1,6 @@
 ---
 layout: year
-jurisdiction: National Gazettes
-title: 2015
-gazettes:
-  - title: the title
-    url: a url
-    date: 2015-02-01
-  - title: title 2
-    url: a url2
-    date: 2015-03-02
+title: South Africa Gazettes 2015
+jurisdiction: ZA
+year: "2015"
 ---
