--- a/_gazettes/za-ec/2014.md
+++ b/_gazettes/za-ec/2014.md
@@ -1,6 +1,8 @@
 ---
 layout: year
-title: Eastern Cape Gazettes 2014
+title: Eastern Cape Provincial Gazettes 2014
 jurisdiction: ZA-EC
+jurisdiction_name: Eastern Cape
+provincial: true
 year: "2014"
 ---
