--- a/_gazettes/za-ec/2015.md
+++ b/_gazettes/za-ec/2015.md
@@ -1,6 +1,8 @@
 ---
 layout: year
-title: Eastern Cape Gazettes 2015
+title: Eastern Cape Provincial Gazettes 2015
 jurisdiction: ZA-EC
+jurisdiction_name: Eastern Cape
+provincial: true
 year: "2015"
 ---
