--- a/_gazettes/za-lp/2012.md
+++ b/_gazettes/za-lp/2012.md
@@ -1,6 +1,8 @@
 ---
 layout: year
-title: Limpopo Gazettes 2012
+title: Limpopo Provincial Gazettes 2012
 jurisdiction: ZA-LP
+jurisdiction_name: Limpopo
+provincial: true
 year: "2012"
 ---
