--- a/_gazettes/za-lp/2015.md
+++ b/_gazettes/za-lp/2015.md
@@ -1,6 +1,8 @@
 ---
 layout: year
-title: Limpopo Gazettes 2015
+title: Limpopo Provincial Gazettes 2015
 jurisdiction: ZA-LP
+jurisdiction_name: Limpopo
+provincial: true
 year: "2015"
 ---
