--- a/_gazettes/za-mp/2012.md
+++ b/_gazettes/za-mp/2012.md
@@ -1,6 +1,8 @@
 ---
 layout: year
-title: Mpumalanga Gazettes 2012
+title: Mpumalanga Provincial Gazettes 2012
 jurisdiction: ZA-MP
+jurisdiction_name: Mpumalanga
+provincial: true
 year: "2012"
 ---
