--- a/_gazettes/za-ec/2012.md
+++ b/_gazettes/za-ec/2012.md
@@ -1,6 +1,8 @@
 ---
 layout: year
-title: Eastern Cape Gazettes 2012
+title: Eastern Cape Provincial Gazettes 2012
 jurisdiction: ZA-EC
+jurisdiction_name: Eastern Cape
+provincial: true
 year: "2012"
 ---
