--- a/_gazettes/za-gt/2012.md
+++ b/_gazettes/za-gt/2012.md
@@ -1,6 +1,8 @@
 ---
 layout: year
-title: Gauteng Gazettes 2012
+title: Gauteng Provincial Gazettes 2012
 jurisdiction: ZA-GT
+jurisdiction_name: Gauteng
+provincial: true
 year: "2012"
 ---
