--- a/_gazettes/za-gt/2014.md
+++ b/_gazettes/za-gt/2014.md
@@ -1,6 +1,8 @@
 ---
 layout: year
-title: Gauteng Gazettes 2014
+title: Gauteng Provincial Gazettes 2014
 jurisdiction: ZA-GT
+jurisdiction_name: Gauteng
+provincial: true
 year: "2014"
 ---
