--- a/_gazettes/za-gt/2015.md
+++ b/_gazettes/za-gt/2015.md
@@ -1,6 +1,8 @@
 ---
 layout: year
-title: Gauteng Gazettes 2015
+title: Gauteng Provincial Gazettes 2015
 jurisdiction: ZA-GT
+jurisdiction_name: Gauteng
+provincial: true
 year: "2015"
 ---
