--- a/_gazettes/za-gt/2016.md
+++ b/_gazettes/za-gt/2016.md
@@ -1,6 +1,8 @@
 ---
 layout: year
-title: Gauteng Gazettes 2016
+title: Gauteng Provincial Gazettes 2016
 jurisdiction: ZA-GT
+jurisdiction_name: Gauteng
+provincial: true
 year: "2016"
 ---
