--- a/_gazettes/za-lp/2013.md
+++ b/_gazettes/za-lp/2013.md
@@ -1,6 +1,8 @@
 ---
 layout: year
-title: Limpopo Gazettes 2013
+title: Limpopo Provincial Gazettes 2013
 jurisdiction: ZA-LP
+jurisdiction_name: Limpopo
+provincial: true
 year: "2013"
 ---
