--- a/_gazettes/za-mp/2013.md
+++ b/_gazettes/za-mp/2013.md
@@ -1,6 +1,8 @@
 ---
 layout: year
-title: Mpumalanga Gazettes 2013
+title: Mpumalanga Provincial Gazettes 2013
 jurisdiction: ZA-MP
+jurisdiction_name: Mpumalanga
+provincial: true
 year: "2013"
 ---
