--- a/_gazettes/za-mp/2014.md
+++ b/_gazettes/za-mp/2014.md
@@ -1,6 +1,8 @@
 ---
 layout: year
-title: Mpumalanga Gazettes 2014
+title: Mpumalanga Provincial Gazettes 2014
 jurisdiction: ZA-MP
+jurisdiction_name: Mpumalanga
+provincial: true
 year: "2014"
 ---
