--- a/_gazettes/za-mp/2015.md
+++ b/_gazettes/za-mp/2015.md
@@ -1,6 +1,8 @@
 ---
 layout: year
-title: Mpumalanga Gazettes 2015
+title: Mpumalanga Provincial Gazettes 2015
 jurisdiction: ZA-MP
+jurisdiction_name: Mpumalanga
+provincial: true
 year: "2015"
 ---
