--- a/_gazettes/za-mp/2016.md
+++ b/_gazettes/za-mp/2016.md
@@ -1,6 +1,8 @@
 ---
 layout: year
-title: Mpumalanga Gazettes 2016
+title: Mpumalanga Provincial Gazettes 2016
 jurisdiction: ZA-MP
+jurisdiction_name: Mpumalanga
+provincial: true
 year: "2016"
 ---
