--- a/_gazettes/za-nc/2014.md
+++ b/_gazettes/za-nc/2014.md
@@ -1,6 +1,8 @@
 ---
 layout: year
-title: Northern Cape Gazettes 2014
+title: Northern Cape Provincial Gazettes 2014
 jurisdiction: ZA-NC
+jurisdiction_name: Northern Cape
+provincial: true
 year: "2014"
 ---
