--- a/_gazettes/za-nl/2014.md
+++ b/_gazettes/za-nl/2014.md
@@ -1,6 +1,8 @@
 ---
 layout: year
-title: KwaZulu-Natal Gazettes 2014
+title: KwaZulu-Natal Provincial Gazettes 2014
 jurisdiction: ZA-NL
+jurisdiction_name: KwaZulu-Natal
+provincial: true
 year: "2014"
 ---
