--- a/_gazettes/za-nl/2015.md
+++ b/_gazettes/za-nl/2015.md
@@ -1,6 +1,8 @@
 ---
 layout: year
-title: KwaZulu-Natal Gazettes 2015
+title: KwaZulu-Natal Provincial Gazettes 2015
 jurisdiction: ZA-NL
+jurisdiction_name: KwaZulu-Natal
+provincial: true
 year: "2015"
 ---
