--- a/_gazettes/za-nw/2012.md
+++ b/_gazettes/za-nw/2012.md
@@ -1,6 +1,8 @@
 ---
 layout: year
-title: North West Gazettes 2012
+title: North West Provincial Gazettes 2012
 jurisdiction: ZA-NW
+jurisdiction_name: North West
+provincial: true
 year: "2012"
 ---
