--- a/_gazettes/za-nw/2016.md
+++ b/_gazettes/za-nw/2016.md
@@ -1,6 +1,8 @@
 ---
 layout: year
-title: North West Gazettes 2016
+title: North West Provincial Gazettes 2016
 jurisdiction: ZA-NW
+jurisdiction_name: North West
+provincial: true
 year: "2016"
 ---
