--- a/_gazettes/za-wc/2004.md
+++ b/_gazettes/za-wc/2004.md
@@ -1,6 +1,8 @@
 ---
 layout: year
-title: Western Cape Gazettes 2004
+title: Western Cape Provincial Gazettes 2004
 jurisdiction: ZA-WC
+jurisdiction_name: Western Cape
+provincial: true
 year: "2004"
 ---
