--- a/_gazettes/za-wc/2011.md
+++ b/_gazettes/za-wc/2011.md
@@ -1,6 +1,8 @@
 ---
 layout: year
-title: Western Cape Gazettes 2011
+title: Western Cape Provincial Gazettes 2011
 jurisdiction: ZA-WC
+jurisdiction_name: Western Cape
+provincial: true
 year: "2011"
 ---
