--- a/_gazettes/za-wc/2014.md
+++ b/_gazettes/za-wc/2014.md
@@ -1,6 +1,8 @@
 ---
 layout: year
-title: Western Cape Gazettes 2014
+title: Western Cape Provincial Gazettes 2014
 jurisdiction: ZA-WC
+jurisdiction_name: Western Cape
+provincial: true
 year: "2014"
 ---
