--- a/_gazettes/za-wc/2015.md
+++ b/_gazettes/za-wc/2015.md
@@ -1,6 +1,8 @@
 ---
 layout: year
-title: Western Cape Gazettes 2015
+title: Western Cape Provincial Gazettes 2015
 jurisdiction: ZA-WC
+jurisdiction_name: Western Cape
+provincial: true
 year: "2015"
 ---
