--- a/_gazettes/za/2015.md
+++ b/_gazettes/za/2015.md
@@ -2,5 +2,7 @@
 layout: year
 title: South Africa Gazettes 2015
 jurisdiction: ZA
+jurisdiction_name: South Africa
+provincial: false
 year: "2015"
 ---
